# Hybrid-RAG-Citation

./: .gitignore  LICENSE  README.md  TODO.md  compose.yaml  start.sh  stop.sh
backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: routes.py
backend/app/core/: __init__.py  config.py
backend/app/data/: __init__.py  mock_docs.py
backend/app/models/: __init__.py  schemas.py
backend/app/services/: dense_retriever.py  document_store.py  hybrid_retriever.py  llm_service.py  rrf_fusion.py  sparse_retriever.py
backend/tests/: test_api_documents.py  test_citations.py  test_document_store.py  test_provider_config.py  test_retrieval_relevance.py
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: ApiSettingsModal.tsx  AppErrorBoundary.tsx  ChatInput.tsx  ChatMessage.tsx  ReferencePanel.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
